# S.E.D.M.S

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  install.py  main.py  main_api.py  pyproject.toml  sedms.py
.streamlit/: config.toml
api/: dependencies.py  limiter.py
api/client/: api_client.py  provider.py
api/middleware/: audit.py
api/router/: __init__.py  analytics.py  devices.py  ml.py  telemetry.py  utils.py
cli/: main_cli.py  utils.py
cli/commands/: analytics.py  db.py  devices.py  logs.py  ml.py  other.py  run.py  security.py  telemetry.py
cli/ui/: base.py  decorators.py
core/: config.py  config.toml  lifespan.py  logging_config.py
database/: connection.py  models_sql.py
database/ml/: retraining_status.json  status_manager.py
frontend/: Dashboard.py  utils.py
frontend/pages/: 0_About.py  1_Inventory.py  2_Monitoring.py  3_Forecasting.py
internal/: security.py
internal/ml/: evaluator.py  handler.py  optimizer.py  processor.py  trainer.py
internal/ml/models/: metadata.json
internal/schemas/: analytic_models.py  analytic_response_model.py  device_models.py  prediction_models.py  prediction_response_model.py  telemetry_models.py
internal/service/: analytics_service.py  calculator.py  device_service.py  ml_service.py  telemetry_service.py  utils.py
